--- a/package.json
+++ b/package.json
@@ -8,23 +8,26 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
     "bootstrap": "5.1.0",
     "ip-address": "^8.1.0",
+    "next": "^13.4.4",
     "node-sass": "6.0.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.0.0-beta.6",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "typescript": "^5.0.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "start": "next start",
+    "build": "next build",
+    "test": "next test",
+    "lint": "next lint",
+    "eject": "next eject"
   },
   "eslintConfig": {
     "extends": [
